[metadata]
name = RaspberryMotors
version = 1.0.1
author = Vikram Dayal
author_email = vdayal@avman.net
description = Raspberry Pi service library dedicated to motor control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/vikramdayal/RaspberryMotors/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
